SERVER-36944 applyOps uses applyCommand_inlock() for system.indexes inserts